--- a/docs/how-to-guides/webiny-applications/admin-area/change-logo.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/change-logo.mdx
@@ -6,6 +6,10 @@ keywords: ["admin", "area", "ui", "logo"]
 description: Learn how to replace the default logo with your own.
 ---
 
+:::info Can I Use This?
+In order to follow this guide, you must use Webiny version **5.12.0** or greater.
+:::
+
 :::tip What you'll learn
 
 - how to replace the default Webiny logo with your own React component
