--- a/docs/how-to-guides/webiny-applications/admin-area/customize-navigation-menu.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/customize-navigation-menu.mdx
@@ -14,16 +14,16 @@ import customMenuRenderer from "./customize-navigation-menu/custom-menu-renderer
 import customMenuSorter from "./customize-navigation-menu/custom-menu-sorter.png";
 import modifySections from "./customize-navigation-menu/modify-sections.png";
 
+:::info Can I use this?
+
+In order to follow this guide, you must use Webiny version **5.13.0** or greater.
+
+:::
+
 :::tip What you'll learn
 
 - how the navigation menu works
 - how to add, remove, and modify menu items in the navigation menu
-
-:::
-
-:::info Can I use this?
-
-In order to follow this tutorial, you must use Webiny version **5.13.0** or greater.
 
 :::
 
