--- a/docs/key-topics/plugins.mdx
+++ b/docs/key-topics/plugins.mdx
@@ -15,6 +15,10 @@ description: Learn about plugins, how they work, and the differences between fro
 
 :::
 
+:::info
+This article gives a theoretical explanation of the concept. If you're looking for instructions on practical usage, please refer to the [Importing Plugins](/docs/how-to-guides/development/importing-plugins) article.
+:::
+
 ## Overview
 
 Webiny is mostly built using plugins. There's just a bit of boilerplate code, and no matter if it's React, GraphQL API, or the Webiny CLI, the majority of Webiny's functionality lives in plugins.
