--- a/docs/how-to-guides/webiny-applications/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
+++ b/docs/how-to-guides/webiny-applications/headless-cms/create-a-webiny-headless-cms-field-plugin.mdx
@@ -13,7 +13,9 @@ description: How to create a new field plugin for Webiny Headless CMS applicatio
 
 This guide should help you understand how to create Headless CMS field plugins and how to use them in the API and the UI. By going through this guide you can see how to create at least two plugins for your field - UI plugin and API plugin. There are extra API field type plugins that can help you with indexing (Elasticsearch) and storage of the field.
 
-Also, in this guide, we assume that you know how Webiny plugins work.
+:::info
+In this guide, we assume that you know how Webiny plugins work. If not, please visit the [Plugins](/docs/key-topics/plugins) key topic article, to get yourself familiar with the concepts.
+:::
 
 ## Plugin Types
 
