--- a/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
+++ b/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
@@ -12,6 +12,10 @@ import updatedSchema from "./extend-page-settings/schema.png";
 import passwordField from "./extend-page-settings/passwordField.png";
 import websitePassword from "./extend-page-settings/websitePassword.png";
 
+:::info Can I Use This?
+This feature is available since Webiny **v5.12.0**.
+:::
+
 :::tip What you'll learn
 
 - how to hook into the page settings views
