chore: add prerequisites section

--- a/docs/how-to-guides/webiny-applications/admin-area/change-logo.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/change-logo.mdx
@@ -16,6 +16,10 @@ In order to follow this guide, you must use Webiny version **5.12.0** or greater
 
 :::
 
+:::info Prerequisites
+To use the instructions presented in this guide, you need to know how to register Webiny plugins in your React applications. Please visit the [Importing Plugins](/docs/how-to-guides/development/importing-plugins) guide, if you're not already familiar with the process.
+:::
+
 ## Overview
 
 Changing the default logo is a very quick and straightforward process. The main Admin Area layout is built using the [UI Composer](/docs/key-topics/ui-composer/introduction). This means that you can hook into any part of the view and modify it.
