--- a/docs/how-to-guides/webiny-applications/admin-area/customize-navigation-menu.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/customize-navigation-menu.mdx
@@ -31,6 +31,10 @@ In order to follow this guide, you must use Webiny version **5.13.0** or greater
 If you're not already familiar with the [Webiny UI Composer](/docs/key-topics/ui-composer/introduction), we recommend familiarizing yourself with the concept before moving on with this guide.
 :::
 
+:::info Prerequisites
+To use the instructions presented in this guide, you need to know how to register Webiny plugins in your React applications. Please visit the [Importing Plugins](/docs/how-to-guides/development/importing-plugins) guide, if you're not already familiar with the process.
+:::
+
 ## Overview
 
 Navigation within the Admin Area application is implemented using the [`NavigationView`](https://github.com/webiny/webiny-js/blob/next/packages/app-admin/src/ui/views/NavigationView.tsx) view class. It is built using the [UI Composer](/docs/key-topics/ui-composer/introduction). This means that you can hook into any part of the view and modify it.
