fix: update tutorial as per feedback

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -37,17 +37,13 @@ The full code example used in this tutorial is available in our [webiny-examples
 
 ## Organization of Files
 
-Although you can place and organize the plugin files as you see fit for your project, we recommend the following structure is adapted.
+Although you can place and organize the plugins in any way you prefer for your project, we recommend adopting the following organization.
 
-Because all page elements need to share code (plugins) between the **Admin Area** `(apps/admin)` and the **Website** `(apps/website)` applications,
-it becomes necessary to put that code in a shared folder.
+When creating new page elements, it's recommended to have all of the needed plugins in a single shared folder.
+This is because some of the plugins will need to be imported both within the **Admin Area** `(apps/admin)` and **Website** `(apps/website)` applications.
 
-:::info
-This is a very common scenario for Page Builder plugins because the Admin Area application uses the plugin to render the element in page preview
-and the Website application uses the same plugin to render the element on the actual page.
-:::
+With that in mind, for this tutorial, we will create the new [`pb-element-iframe`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe) folder in the [`apps/extensions`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions) folder.
 
-We will create a folder named [`pb-element-iframe`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe) in [`apps/extensions`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions) which will contain all of the code for plugins.
 :::note
 By default, the `extensions` folder does not exist, so you'll need to create it.
 :::
@@ -56,20 +52,20 @@ By default, the `extensions` folder does not exist, so you'll need to create it.
 
 To create a new page element, we need to register two sets of plugins:
 1. For the **Admin Area** application:
-- a plugin that defines how it's rendered in the editor
+- a plugin that defines how it's rendered in the page editor
 - a plugin that defines all the available settings and options for it
 2. For the **Website** application:
 - a plugin that defines how the page element is rendered on the actual page
 
 To better organize files we'll write all the plugins needed for the **Admin Area** application and **Website** application in
-[`apps/extensions/pb-element-iframe/admin`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin) and [`apps/extensions/pb-element-iframe/render`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/render) respectively.
+[`apps/extensions/pb-element-iframe/admin`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin) and [`apps/extensions/pb-element-iframe/render`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/render), respectively
 
-Let's get started with scaffolding folder and files for plugins.
+Let's get started with scaffolding initial folders and files for our page element plugins.
 
 ### Scaffold Folder and Files for Plugins
 
-- Create a folder named [`pb-element-iframe`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe) inside [`apps/extensions`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/).
-- Create a [`package.json`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/package.json) file inside `apps/extensions/pb-element-iframe` with the following contents:
+- create a folder named [`pb-element-iframe`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe) inside [`apps/extensions`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/)
+- create a [`package.json`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/package.json) file inside `apps/extensions/pb-element-iframe` with the following contents:
 
 ```json title="apps/extensions/pb-element-iframe/package.json"
 {
@@ -89,7 +85,7 @@ Let's get started with scaffolding folder and files for plugins.
 }
 ```
 
-- Create a [`tsconfig.json`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/tsconfig.json) file with the following contents:
+- create a [`tsconfig.json`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/tsconfig.json) file with the following contents:
 ```json title="apps/extensions/pb-element-iframe/tsconfig.json"
 {
   "extends": "../../../tsconfig",
@@ -99,13 +95,13 @@ Let's get started with scaffolding folder and files for plugins.
   }
 }
 ```
-- Add `"apps/extensions/pb-element-iframe"` to workspaces packages inside `package.json` in project root.
+- add `"apps/extensions/pb-element-iframe"` to workspaces packages inside `package.json` in project root
 
-- Create `admin` and `render` folders inside `apps/extensions/pb-element-iframe`.
+- create `admin` and `render` folders inside `apps/extensions/pb-element-iframe`
 
-- Link workspaces by running `yarn install` command from project root. After completion there will be a [symbolic link](https://en.wikipedia.org/wiki/Symbolic_link) of `@extensions/pb-element-iframe` package in `node_modules`.
+- link workspaces by running `yarn install` command from project root. After completion there will be a [symbolic link](https://en.wikipedia.org/wiki/Symbolic_link) of `@extensions/pb-element-iframe` package in `node_modules`
 
-- Add `@extensions/pb-element-iframe` package as a dependency to both the Admin Area application and Website application,
+- add `@extensions/pb-element-iframe` package as a dependency to both the Admin Area application and Website application,
 by editing the `apps/admin/code/package.json` and `apps/website/code/package.json` files respectively:
 
 ```shell
@@ -243,10 +239,11 @@ The `toolbar` property helps us put our plugin into the toolbar.
 Finally, it’s up to the `render` function to define how the page element will be rendered once the user drops it on the page.
 
 :::note
-Notice the `props` that were passed to the render function. This object contains all the relevant page element's data and settings.
+Notice the `props` that were passed to the `render` function. This object contains all the relevant page element's data and settings.
 :::
 
-After [registering the plugin](#register-plugins-in-the-admin-area-application) in the Admin Area application  it will appear in editor toolbar similar to the pre-defined elements as shown below:
+After [registering the plugin](#register-plugins-in-the-admin-area-application) in the Admin Area application the new page element should appear in the editor toolbar,
+similar to the pre-defined elements as shown below:
 
 <!-- vale off -->
 
@@ -258,7 +255,8 @@ After [registering the plugin](#register-plugins-in-the-admin-area-application) 
 
 <!-- vale on -->
 
-Now that we've covered the overall structure of plugin, let's see what's inside [`IFrameEditor`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx) component:
+Now that we've covered the overall structure of the plugin,
+let's see what's inside the [`IFrameEditor`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx) component:
 
 ```tsx title="apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx"
 // ...
@@ -291,16 +289,16 @@ const IframeEditor = props => {
 export default IframeEditor;
 ```
 
-As you can see, it's a simple React component which render an `iframe` HTML element.
+As you can see, it's a simple React component which renders an `iframe` HTML element.
 
 :::note
-Every element needs to have [`ElementRoot`](https://github.com/webiny/webiny-js/blob/v5/packages/app-page-builder/src/render/components/ElementRoot.tsx#L31)
+Every element needs to have the [`ElementRoot`](https://github.com/webiny/webiny-js/blob/v5/packages/app-page-builder/src/render/components/ElementRoot.tsx#L31)
 component as root because it applies **styles**, **classes** and **attributes** to the element assigned via right sidebar style tab.
 :::
 
 :::info
 Notice we've added [`webiny-pb-base-page-element-style`](https://github.com/webiny/webiny-js/blob/v5/apps/theme/pageBuilder/styles/base.scss#L59) CSS class.
-Every element needs to have it as it contains all base styles applied by Page Builder app.
+Every element needs to have it as it contains all base styles applied by the Page Builder application.
 :::
 
 :::tip
@@ -309,7 +307,7 @@ Notice we've added [`webiny-pb-page-element-iframe`](https://github.com/webiny/w
 
 ### Element Settings Plugin
 
-The next plugin we'll need to define is the [`PbEditorPageElementAdvancedSettingsPlugin `](/docs/references/page-builder/plugins#pb-editor-page-element-advanced-settings),
+The next plugin we'll need to define is the [`PbEditorPageElementAdvancedSettingsPlugin`](/docs/references/page-builder/plugins#pb-editor-page-element-advanced-settings),
 which we will use to render the required UI for settings, so the user can provide an `iframe` URL.
 The settings UI will be shown automatically in the right sidebar when the user drag-and-drop the page element on the page.
 
@@ -484,7 +482,7 @@ After registering the plugins successfully, we should be able to see the `iframe
 
 In order to render the page element in the Website application, we will use the [`PbRenderElementPlugin`](/docs/references/page-builder/plugins#pb-render-page-element) plugin again.
 
-```tsx title="apps/extensions/pb-element-iframe/render/components/iFrame.tsx"
+```tsx title="apps/extensions/pb-element-iframe/render/index.tsx"
 import { PbRenderElementPlugin } from "@webiny/app-page-builder/types";
 
 import IFrame from "./components/iFrame";
