wip: create changelog

--- a/docs/changelog/5.13.0.mdx
+++ b/docs/changelog/5.13.0.mdx
@@ -20,4 +20,18 @@ Please check the [Webiny 5.13.0 migration guide](/docs/how-to-guides/upgrade-web
 
 ### New Scaffolds ([#1839](https://github.com/webiny/webiny-js/pull/1839))
 
-✍️
+Write this.
+
+### New `types.ts` Declaration File In GraphQL API Application Code ([#1839](https://github.com/webiny/webiny-js/pull/1839))
+
+Write this.
+
+### Custom AWS Profiles Work Now Work As Expected ([#1839](https://github.com/webiny/webiny-js/pull/1839))
+
+Write this.
+
+## Page Builder
+
+### Pages Rendering - Meta Data Injected At The Top of the HTML Document ([#1865](https://github.com/webiny/webiny-js/pull/1865))
+
+Write this.
