wip: create changelog

--- a/docs/changelog/5.13.0.mdx
+++ b/docs/changelog/5.13.0.mdx
@@ -18,9 +18,30 @@ Please check the [Webiny 5.13.0 migration guide](/docs/how-to-guides/upgrade-web
 
 ## Development
 
-### New Scaffolds ([#1839](https://github.com/webiny/webiny-js/pull/1839))
+### Three New Scaffolds ([#1839](https://github.com/webiny/webiny-js/pull/1839))
 
-✍️
+The highlight of this release - we bring you three brand new scaffolds that are mainly focused on aiding developers in custom application development. The three scaffolds are:
+
+- New Full Stack Application
+- New GraphQL API
+- New React Application
+
+To get started, simply run the existing `webiny scaffold` command and pick the scaffold you need. You can also check out the linked guides to learn more.
+
+### New `types.ts` Declaration File In GraphQL API Application Code ([#1839](https://github.com/webiny/webiny-js/pull/1839))
+
+Write this.
+
+### Custom AWS Profiles Work Now Work As Expected ([#1839](https://github.com/webiny/webiny-js/pull/1839))
+
+Write this.
+
+## Page Builder
+
+### Pages Rendering - Meta Data Injected At The Top of the HTML Document ([#1865](https://github.com/webiny/webiny-js/pull/1865))
+
+Write this.
+
 ### Yarn 3 Support ([#1862](https://github.com/webiny/webiny-js/pull/1862))
 You can now use Yarn 3 with your existing projects, and all new Webiny projects will be created with Yarn 3. Yarn project is using the codename **berry** for all their releases. To prevent unexpected problems as major version releases occur, our CLI and **create-webiny-project** utility will have the supported versions of Yarn whitelisted. Currently, we allow versions 2 and 3, and we'll keep adding new versions when they arrive, only after thorough testing.
 
@@ -34,6 +55,6 @@ With the introduction of [Webiny UI Composer](/docs/key-topics/ui-composer/intro
 
 
 ### Add `.mjs` Webpack Rule ([#1852](https://github.com/webiny/webiny-js/pull/1852))
-When including a third-party dependency into your GraphQL Lambda functions, if that dependency uses JS modules (`.mjs` extension), webpack bundling would fail. We've now added a rule to properly bundle `.mjs` files. 
+When including a third-party dependency into your GraphQL Lambda functions, if that dependency uses JS modules (`.mjs` extension), webpack bundling would fail. We've now added a rule to properly bundle `.mjs` files.
 
 Shout out to [@econtentmaps](https://github.com/econtentmaps) for testing the fix! :raised_hands: :heart:
