fix: simplify how-to-guides menu organization

--- a/docs/how-to-guides/scaffolding/new-react-application.mdx
+++ b/docs/how-to-guides/scaffolding/new-react-application.mdx
@@ -33,7 +33,7 @@ As the name suggests, the **New React Application** scaffold creates a new stand
 
 ### Clean Setup
 
-Except for the provided example pages, base application and cloud infrastructure code, the created React application does not contain any additional code or specific business logic. It's a _clean slate_ and you can start building on top of the created code in any way you prefer. You can also bring needed libraries, introduce new cloud infrastructure resources, and more.
+Except for the provided example pages, base application, and cloud infrastructure code, the created React application does not contain any additional code or specific business logic. It's a _clean slate_ and you can start building on top of the created code in any way you prefer. You can also bring needed libraries, introduce new cloud infrastructure resources, and more.
 
 Be sure to check the [Development](/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api#development) section below to learn more.
 
