fix: update tutorial as per feedback

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -57,7 +57,7 @@ To create a new page element, we need to register two sets of plugins:
 2. For the **Website** application:
 - a plugin that defines how the page element is rendered on the actual page
 
-To better organize files we'll write all the plugins needed for the **Admin Area** application and **Website** application in
+To better organize files, we'll write all the plugins needed for the **Admin Area** application and **Website** application in
 [`apps/extensions/pb-element-iframe/admin`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin) and [`apps/extensions/pb-element-iframe/render`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/render), respectively
 
 Let's get started with scaffolding initial folders and files for our page element plugins.
@@ -531,11 +531,11 @@ After registering the plugins successfully, the page element should be visible i
 
 ## Conclusion
 
-We've successfully created a new page element for the Page Builder application.
-You can use the same approach to easily create a whole array of custom elements for Page Builder app.
+In this tutorial, we’ve learned how we can create a new `iframe` page element and make it configurable within the Page Builder application’s page editor.
+The same approach can be used to create any page element, so make sure to bookmark and revisit this tutorial, in case you need a refresher on any of the steps.
 
-You can find the full code example in our [webiny examples](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element) Github repository.
-If you have further questions, feel free to [ask](https://www.webiny.com/slack) for additional help.
+Once again, a full code example can be found in our [webiny examples](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element) Github repository.
+And, if you have further questions, or you simply got stuck, feel free to [ask](https://www.webiny.com/slack) for additional help in our Community Slack.
 
 ## FAQ
 
