--- a/docs/how-to-guides/scaffolding/new-react-application.mdx
+++ b/docs/how-to-guides/scaffolding/new-react-application.mdx
@@ -25,7 +25,9 @@ This feature is available since **v5.13.0**.
 
 ## Overview
 
-As the name suggests, the **New React Application** scaffold creates a new standalone React application. It consists of a couple of simple pages and examples which makes it possible to quickly get started with building a new frontend application.
+As the name suggests, the **New React Application** scaffold creates a new standalone React application, on top of which you can build [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This is ideal for secured or non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
+
+The created application consists of a couple of simple pages and examples which makes it possible to quickly get started with building a new frontend application.
 
 <CenteredImage shadow={false} canEnlarge={false} alt="The New React Application" src={preview} />
 
@@ -33,15 +35,26 @@ As the name suggests, the **New React Application** scaffold creates a new stand
 
 ### Clean Setup
 
-Except for the provided example pages, base application, and cloud infrastructure code, the created React application does not contain any additional code or specific business logic. It's a _clean slate_ and you can start building on top of the created code in any way you prefer. You can also bring needed libraries, introduce new cloud infrastructure resources, and more.
+Except for the provided example pages and the base application and cloud infrastructure code, the created React application does not contain any additional code or specific business logic. It's a _clean slate_ and you can start building on top of the created code in any way you prefer. You can also bring needed libraries, introduce new cloud infrastructure resources, and more.
 
-Be sure to check the [Development](/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api#development) section below to learn more.
+Be sure to check the [Development](#development) section below to learn more.
 
-### Simple Page Example
+### Included Examples
+
+Out of the box, the newly created React application contains simple home and not-found (404) pages. These will give you an idea on how to approach solving some of the common requirements:
+
+- organization of files and folders
+- defining application routes
+- defining plugins
+- importing styles
+- importing images
+- and more
+
+Once you start building your application, you can remove them or simply move them into a separate folder, potentially for future reference.
 
 ### Simple Cloud Infrastructure
 
-Only a couple of cloud infrastructure resources need to be deployed in order to host a new GraphQL API, which is depicted by the following diagram:
+Only a couple of cloud infrastructure resources need to be deployed in order to host a new React application, which is depicted by the following diagram:
 
 <CenteredImage
   shadow={false}
@@ -51,7 +64,9 @@ Only a couple of cloud infrastructure resources need to be deployed in order to 
 />
 
 :::info
-The shown cloud infrastructure resources do not need to be deployed immediately after the scaffolding process has been completed. Frontend application development can still be performed locally, on developer's machine. But, once it's time to deploy it, you can do that as usual, with the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
+The shown cloud infrastructure resources do not need to be deployed immediately after the scaffolding process has been completed. Frontend application development can still be performed locally, on the developer's machine.
+
+But, once it's time to deploy it, you can do that as usual, with the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
 :::
 
 ## Development
@@ -85,38 +100,32 @@ The following are the most essential files and folders that are generated during
 ```
 
 :::info
-The path in which the new GraphQL API and all of its files and folders are created is specified in the scaffold's wizard.
+The path in which the new React application and all of its files and folders are created is specified in the scaffold's wizard.
 :::
 
-#### [`code/src/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src)
+#### [`code/src/`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src)
 
-Contains the GraphQL API application code. This is where you'll be defining the GraphQL schema, resolver functions, business logic, authentication / authorization logic, writing tests, and potentially more.
+Contains the React application code. This is where you'll be creating your applications pages, shared React components, defining routes, styles, and more.
 
-#### [`code/graphql/src/types.ts`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts)
+#### [`code/src/components`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/components)
 
-Contains global type definitions, that can be imported in different places in your application code.
+Contains React components that can be shared between multiple pages, for example, a global application layout.
 
-When created, it only exports the [`Context`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts#L9) interface, which defines the `context` object that you will often be using while creating GraphQL resolver functions. If you will be extending the `context` object, for example via custom [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/handler/src/plugins/ContextPlugin.ts#L7) plugins, an update to this interface should be made as well. By doing this, you and your team will benefit from improved type-safety and easier discovery process.
+#### [`code/src/images`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/images)
 
-#### [`code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/plugins)
+Contains images that can be imported either from your React component or from SCSS files.
 
-This is where you'll be creating plugins, either manually or via other scaffolding utilities, for example via the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold.
+#### [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins)
 
-:::tip
-Do have in mind that every plugin (or a collection of plugins) you create also needs be imported and registered in the [`code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/index.ts#L11) entrypoint file.
-:::
+Contains plugins, like [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins that define application routes or [`ApolloLinkPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/ApolloLinkPlugin.ts#L8) plugins that define Apollo links.
 
-#### [`code/graphql/jest.config.js`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/jest.config.js)
+#### [`code/src/styles`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/styles)
 
-The config for the [Jest](/docs/key-topics/tools-libraries#testing) testing framework. Feel free to adjust it to your needs.
+Contains SCSS files that define styles used by your application. And although, out of the box, this is only way to define styles, if you maybe prefer a CSS-in-JS solution, you're always free to add additional libraries.
 
-#### [`code/graphql/.babelrc.js`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/.babelrc.js)
+#### [`code/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json)
 
-The config for the [Babel](/docs/key-topics/tools-libraries#building-code) JavaScript compiler. Feel free to adjust it to your needs.
-
-#### [`code/graphql/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json)
-
-In case you missed it, every Webiny project is organized as a monorepo, which can consist of multiple packages. This is the reason why the [`package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json) manifest file exists.
+In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists.
 
 In most cases, this file will only be modified when new NPM packages are added.
 
@@ -124,29 +133,19 @@ In most cases, this file will only be modified when new NPM packages are added.
 Learn more about the monorepo organization in the [Monorepo Organization](/docs/key-topics/project-organization/monorepo-organization) key topic.
 :::
 
-#### [`pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi)
+#### [`pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/pulumi)
 
-This is the folder that contains all of the cloud infrastructure code. In it, we have the [`dev`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folders, which represent the cloud infrastructure resources that will be deployed into development and production environments, respectively.
-
-If we were to compare the two, we'd find that the code located in the [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder also deploys a new [Amazon Virtual Private Cloud (VPC)](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/vpc.ts#L3) and that the single AWS Lambda function is [deployed into it](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/graphql.ts#L87). Down the line, doing this for cloud infrastructure resources can improve our GraphQL API's overall security posture.
-
-Note that, by default, the cloud infrastructure code in the [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder will only be used when deploying into the `prod` (production) environment. If you maybe wish to deploy the same into another environment, for example `staging`, you can set this in the [`pulumi/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/index.ts#L8) entrypoint file.
+This is the folder that contains all of the cloud infrastructure code.
 
 :::info
 Learn more about Pulumi, the default infrastructure-as-code (IaC) framework Webiny relies on, in the [Infrastructure as code with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
 :::
 
-### Extending the GraphQL API
+### No Initial Deployment Needed
 
-The new GraphQL API can be extended in two ways.
+As mentioned above, frontend application development can still be performed locally, on the developer's machine.
 
-A more manual approach would be to create and register new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugins, via which you define how you want to extend the GraphQL schema and all of the resolver functions. To learn more, take a look at the the [Extend GraphQL API](/docs/how-to-guides/extend-graphql-api) guide.
-
-On the other hand, a much faster way of extending the GraphQL API would be to use the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold, which not only creates all of the boilerplate code, but also a set of essential GraphQL query and mutations, sets up the database connection, generates sample tests, and more.
-
-### First Deploy
-
-Once you've completed the scaffold's wizard and the files have been generated, in order to actually access the GraphQL API, you need to deploy it. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
+Which means no initial deployment is needed. Once you've completed the scaffold's wizard and the files have been generated, in order to start developing, you can simply start by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command (see below). Only when you actually want to see your application online, you can proceed as usual, by running the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
 
 ### Development Using the Watch Command
 
@@ -155,25 +154,112 @@ The most straightforward way to continue developing on top of the generated code
 In order to get started, from your project root, simply run the following command:
 
 ```
-yarn webiny watch {graphql-api-path} --env {env}
+yarn webiny watch {react-application-path} --env {env}
 ```
 
-With the new watch session initialized, every change you make in the code will automatically trigger a re-deploy of the code, enabling you to see the changes in the cloud almost immediately as you make them (every redeployment takes 2-4 seconds to complete).
+Except starting a local development server and making your React application locally accessible, this command will also make sure all of the application code changes you perform are immediately reflected in the browser which is running the application.
 
-And although developers often choose this approach when developing smaller features or proof of concepts, for anything larger in scope, we recommend the new code to be tested via one or more different types of tests.
+### Creating First Pages
 
-:::tip
-To learn more about how to write different types of tests, we recommend you check out the [Writing and Running Tests](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#writing-and-running-tests) section in the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) guide.
+Once you've completed the scaffold's wizard and the files have been generated, the first steps would be to start creating new pages, in the similar fashion it's already done with the existing example pages. Simply create a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins inside of the [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins) folder, and start creating your page within it.
+
+Every application has one or more layouts, so you can also start editing the [`code/src/components/Layout.tsx`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/components/Layout.tsx). Feel free to remove anything that's not needed. The styles for the layout can be found in the [`code/src/styles/global.scss`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/styles/global.scss#L33) file.
+
+### Linking the React Application With a GraphQL API
+
+Out of the box, the new React application scaffold also includes the [Apollo GraphQL (v2)](https://www.apollographql.com/docs/react/v2) client, which you can use to perform queries and mutations against an existing GraphQL API.
+
+But, unless the new React application was created with the [New Full-Stack Application](/docs/how-to-guides/scaffolding/new-full-stack-application) scaffold, you will have to manually link your React application with an existing GraphQL API.
+
+For example, let's say our application needs to interact with the main GraphQL API that's, by default, set up with every Webiny project and is deployed as part of the **API** project application, located within the [`api`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cwp-template-aws/template/api) folder.
+
+In order to do this, upon starting a new watch session or building our application, we need to set the [`REACT_APP_GRAPHQL_API_URL`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/App.tsx#L15) environment variable and assign the URL over which the GraphQL API is actually accessible.
+
+So, we need to add the following lines into the [`code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/webiny.config.ts):
+
+```ts title="webiny.config.ts" {1,3,5,6,7,9,17-21,27-31}
+import invariant from "invariant";
+import { startApp, buildApp } from "@webiny/project-utils";
+import { getStackOutput } from "@webiny/cli-plugin-deploy-pulumi/utils";
+
+const MAP = {
+  REACT_APP_GRAPHQL_API_URL: "${apiUrl}/graphql",
+};
+
+const NO_ENV_MESSAGE = `Please specify the environment via the "--env" argument, for example: "--env dev".`;
+
+// Exports fundamental watch and build commands.
+// Need to inject environment variables or link your application with an existing GraphQL API?
+// See https://www.webiny.com/docs/how-to-guides/webiny-cli/scaffolding/new-react-application/webiny-config.
+export default {
+  commands: {
+    async watch(options, context) {
+      invariant(options.env, NO_ENV_MESSAGE);
+      Object.assign(process.env, getStackOutput("api", options.env, MAP));
+
+      // Starts local application development.
+      await startApp(options, context);
+    },
+    async build(options, context) {
+      invariant(options.env, NO_ENV_MESSAGE);
+      Object.assign(process.env, getStackOutput("api", options.env, MAP));
+
+      // Creates a production build of your application, ready to be deployed to
+      // a hosting provider of your choice, for example Amazon S3.
+      await buildApp(options, context);
+    },
+  },
+};
+```
+
+So, within both commands, we rely on the deployed GraphQL API (`api`) and its stack output to retrieve the URL over which the GraphQL API is accessible. If needed, additional information can be retrieved too, but remember to export it in the cloud infrastructure code, in [`api/pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/dev/index.ts#L127) and [`api/pulumi/prod/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/prod/index.ts#L133) files.
+
+:::info
+The same steps would have to be followed if we wanted to link our React application with the Headless CMS GraphQL API or maybe with a new standalone GraphQL API, created with the [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) scaffold. The only thing that would change is the folder that's being passed to the `getStackOutput` function.
 :::
 
 ## FAQ
 
-#### How does security (authentication and authorization) work?
+#### Is server-side rendering (SSR) supported?
 
-Please note that, by default, the authentication and authorization logic isn't included in the generated code. In other words, all of the generated GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behaviour.
+No.
 
-Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/extend-admin-area/security/introduction) to learn how to implement these on your own.
+The **New React Application** scaffold creates a new standalone React application, on top of which you can build [client-side rendered (CSR)](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) applications. This is ideal for secured or non-public-facing applications that do not need to be [SEO](https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=en%2F&visit_id=637648024549328679-3615718033&rd=1) compatible.
 
-#### Do I need to deploy the created GraphQL API in order to continue development?
+If you need something like SSR, then you might look into other frameworks, for example [Next.js](https://nextjs.org/docs/basic-features/pages#server-side-rendering).
 
-Yes, every change that you make needs to be deployed into the cloud, in order to actually see it in action. At the moment, the local-development option isn't supported.
+#### For development purposes, into which environment should I deploy?
+
+You can use any name as the name of the environment, but common practice is to use `dev`, for example:
+
+```
+yarn webiny watch {react-application-path} --env dev
+```
+
+#### Can I modify commands specified within the `webiny.config.ts` file?
+
+You certainly can. You can also add new commands, if need be.
+
+#### How can I add new libraries to the created React application?
+
+In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`code/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists.
+
+This is also the reason why we can't just run `yarn add xyz` from our project root. We need to specify to which yarn workspace the new library needs to be added, which can be done via the [`yarn workspace {workspace-name} add {library-name}`](https://classic.yarnpkg.com/en/docs/cli/workspace/) command.
+
+So, let's say we wanted to add the [`react-helmet`](https://www.npmjs.com/package/react-helmet) library to our newly created React application that's created within the `new-react-app` folder. To add the library, we'd use the following command:
+
+```bash
+yarn workspace new-react-app add react-helmet
+```
+
+Note that the name of the workspace is defined in the workspace's `package.json` file, via the `name` property (traditionally used to define the package name). In case of the `new-react-app` React application, that would be in `new-react-app/code/package.json` file.
+
+#### Do I need to deploy the created React application in order to continue development?
+
+No. As mentioned above, frontend application development can still be performed locally, on the developer's machine. You only deploy the application when you need to have it online.
+
+
+
+
+
+
