--- a/docs/how-to-guides/scaffolding/new-full-stack-application.mdx
+++ b/docs/how-to-guides/scaffolding/new-full-stack-application.mdx
@@ -21,7 +21,7 @@ This feature is available since **v5.13.0**.
 
 ## Overview
 
-The **New Full Stack Application** scaffold extends your project's GraphQL HTTP API with a new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
+The **New Full Stack Application** scaffold creates a new full stack application which consists of a simple React application and the supporting GraphQL HTTP API.
 
 Note that, when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/code/graphql) folder.
 
