--- a/docs/how-to-guides/scaffolding/new-graphql-api.mdx
+++ b/docs/how-to-guides/scaffolding/new-graphql-api.mdx
@@ -170,6 +170,15 @@ A more manual approach would be to create and register new [`GraphQLSchemaPlugin
 
 On the other hand, a much faster way of extending the GraphQL API would be to use the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold, which not only creates all of the boilerplate code, but also a set of essential GraphQL query and mutations, sets up the database connection, generates sample tests, and more.
 
+### Interacting with Amazon DynamoDB
+
+In order to interact with the deployed Amazon DynamoDB table, you can use any library, for example the official [DynamoDB Document Client](https://docs.aws.amazon.com/sdk-for-javascript/v2/developer-guide/dynamodb-example-document-client.html) or maybe even [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox).
+
+Note that, when setting up your database client, the deployed table's Amazon resource name (ARN) can be read via the `DB_TABLE` environment variable, which is defined via the created [cloud infrastructure code](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev/index.ts#L22).
+
+:::info
+By default, the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) relies on [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox) for all Amazon DynamoDB interactions.
+:::
 
 ## FAQ
 
@@ -208,3 +217,15 @@ yarn workspace new-graphql-api add dataloader
 ```
 
 Note that the name of the workspace is defined in the workspace's `package.json` file, via the `name` property (traditionally used to define the package name). In case of the `new-react-app` React application, that would be in `new-graphql-api/code/graphql/package.json` file.
+
+#### I want to use a different database, how do I set it up?
+
+First of all, it's recommended you [remove the Amazon DynamoDB table](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev/index.ts#L16) that is already defined. After that, you should consult the [Pulumi documentation](https://www.pulumi.com/docs/) to see what are all of the available options and how your database can be defined in the existing cloud infrastructure code.
+
+Once that's in place, most probably, you will need to pass some sort of a connection string to the GraphQL API AWS Lambda function. You can do that via environment variables, which can be set via the cloud infrastructure code in [`pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev/index.ts#L22) and [`pulumi/prod/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/index.ts#L22).
+
+Finally, in your application code, make sure the values from set environment variables are correctly passed to your database client.
+
+:::info
+Note that, at the moment, the [Extend GraphQL API](/docs/how-to-guides/extend-graphql-api) scaffold works exclusively with DynamoDB. You can still use it, but you will need to make a couple of adjustments to the created code - manually replace the [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox) with your client.
+:::
