wip: create new-scaffolds docs

--- a/docs/how-to-guides/scaffolding/new-react-application.mdx
+++ b/docs/how-to-guides/scaffolding/new-react-application.mdx
@@ -105,7 +105,7 @@ The path in which the new React application and all of its files and folders are
 
 #### [`code/src/`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src)
 
-Contains the React application code. This is where you'll be creating your applications pages, shared React components, defining routes, styles, and more.
+Contains the React application code. This is where you'll be creating your application's pages, shared React components, defining routes, styles, and more.
 
 #### [`code/src/components`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/components)
 
