--- a/docs/how-to-guides/scaffolding/new-full-stack-application.mdx
+++ b/docs/how-to-guides/scaffolding/new-full-stack-application.mdx
@@ -6,6 +6,9 @@ keywords: ["scaffolding", "new", "full", "stack", "application"]
 description: Learn how to use the New Full Stack Application scaffold.
 ---
 
+import CenteredImage from "@components/CenteredImage";
+import gqlApiExample from "./new-full-stack-application/gql-api-example.png";
+
 :::info Can I use this?
 
 This feature is available since **v5.13.0**.
@@ -21,198 +24,167 @@ This feature is available since **v5.13.0**.
 
 ## Overview
 
-The **New Full Stack Application** scaffold creates a new full stack application which consists of a simple React application and the supporting GraphQL HTTP API.
+The **New Full Stack Application** scaffold creates a new full stack application which consists of a simple React application on the frontend, and the supporting GraphQL HTTP API on the backend, powered by AWS Lambda and Amazon DynamoDB.
 
-Note that, when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/code/graphql) folder.
-
-:::info
-Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
+:::note
+In order to create a new full stack application, behind the scenes, the scaffold is relying on the existing [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) and [New React Application](/docs/how-to-guides/scaffolding/new-react-application) scaffolds.
 :::
 
 ## Features
 
-### New CRUD Query and Mutation Operations
+### Frontend and Backend Applications
 
-The **New Full Stack Application** extends your GraphQL API with two query and three mutation operations.
+The New Full Stack Application scaffold creates everything that you might need in order to start creating a new full stack application. It creates two [project applications](/docs/key-topics/project-organization/project-applications), one that holds your frontend, and the other one that holds your backend application.
 
-The names of these depend on the name of the initial data model, which is specified during the scaffold's wizard. For example, by passing **CarManufacturer** as the initial data model name, the GraphQL API will be extended with the following queries and mutations:
-
-```graphql
-type CarManufacturerQuery {
-  # Returns a single CarManufacturer entry by given ID.
-  getCarManufacturer(id: ID!): CarManufacturer
-
-  # Returns a list of CarManufacturer entries. Supports basic sorting and pagination.
-  listCarManufacturers(
-    limit: Int
-    before: String
-    after: String
-    sort: CarManufacturersListSort
-  ): CarManufacturersList!
-}
-
-type CarManufacturerMutation {
-  # Creates and returns a new CarManufacturer entry.
-  createCarManufacturer(data: CarManufacturerCreateInput!): CarManufacturer!
-
-  # Updates and returns an existing CarManufacturer entry.
-  updateCarManufacturer(id: ID!, data: CarManufacturerUpdateInput!): CarManufacturer!
-
-  # Deletes and returns an existing CarManufacturer entry.
-  deleteCarManufacturer(id: ID!): CarManufacturer!
-}
-
-extend type Query {
-  carManufacturers: CarManufacturerQuery
-}
-
-extend type Mutation {
-  carManufacturers: CarManufacturerMutation
-}
-```
+The frontend application is powered by React and is created with the [New React Application](/docs/how-to-guides/scaffolding/new-react-application) scaffold. On the other hand, the backend application is powered by a GraphQL API and is created with the [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) scaffold.
 
 :::info
-If you want to check out the full GraphQL schema that's generated during the scaffolding, take a look at the [template](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) that's used in the process.
+For more information on specific features that these two scaffolds include, we recommend you check out the dedicated [New React Application](/docs/how-to-guides/scaffolding/new-react-application) and [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) guides.
 :::
 
-### Storing and Retrieving Data
+### Clear Organization
 
-All of the generated GraphQL queries and mutations rely on a single database for storing and retrieving data. By default, this is [AWS DynamoDB](https://aws.amazon.com/dynamodb/), which is defined in [`api/pulumi/dev/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/dev/dynamoDb.ts) and [`api/pulumi/prod/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/dynamoDb.ts).
+The full stack application is created within a single folder, which contains both frontend and backend project applications. More on the organization of files and folders can be found in the [Development](#development) section below.
 
-For all database interactions, the generated application code relies on a library called [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox):
+### Linked Automatically
 
-> The DynamoDB Toolbox is a set of tools that makes it easy to work with Amazon DynamoDB and the DocumentClient. It's designed with Single Tables in mind, but works just as well with multiple tables.
+The scaffold automatically ensures that the React application pulls the URL over which the deployed GraphQL API is accessible. In other words, once you start the application locally, you can immediately start using the included [Apollo GraphQL (v2)](https://www.apollographql.com/docs/react/v2) client to issue GraphQL queries and mutations.
 
-Note that if you prefer a different library, like for example the [DynamoDB Document Client](https://docs.aws.amazon.com/sdk-for-javascript/v2/developer-guide/dynamodb-example-document-client.html), you're free to use it, but it will require some manual migration work.
+### GraphQL API Interaction Example
 
-### Multi-Locale Support Enabled
+During the scaffold's setup wizard, users get to choose whether they want to also include a simple GraphQL API interaction example code. In other words, the scaffold will create an additional page in your React application and extend the GraphQL API with a basic set of CRUD queries and mutations (using the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) scaffold).
 
-By default, Webiny Admin Area is a multi-locale system, which means entries like pages, page categories, forms, settings, and so on, are always created for a specific locale.
+To check out the example, start your React application locally and open it in your browser. Then, in the top left corner of the screen, click on the **A Simple GraphQL API Example** link:
 
-The generated application code follows the same idea. There aren't any additional steps that you need to takefyo in order to enable multi-locale support.
+<CenteredImage shadow={false} alt="GraphQL API Interaction Example" src={gqlApiExample} />
 
-### Testing Setup
-
-With the application code, the scaffold also generates one unit, one integration, and one end-to-end (E2E) test, which you can use as a reference in further development. All of the tests can be found in the [`__tests__`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/__tests__) folder located within the scaffolded application code. More on this in the [Development](/docs/how-to-guides/scaffolding/extend-graphql-api#development) section below.
-
-:::tip
-A brief overview of different types of tests can be found in the [CI/CD / Testing](/docs/key-topics/ci-cd/testing#application-testing---a-brief-overview) key topic.
+:::info
+Check out the New React Application scaffold's [Development](/docs/how-to-guides/scaffolding/new-react-application#development-using-the-watch-command) section to learn how to start the React application locally.
 :::
-
-### No Additional Cloud Infrastructure Resources
-
-The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing GraphQL API application code ([`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/code/graphql)).
-
-Of course, if additional cloud infrastructure resources are needed, you're free to amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/pulumi), and reference the added and deployed resources in your application code.
 
 ## Development
 
-### Essential Files
+### Essential Files and Folders
 
-The following are the most essential files and folders that are generated in the scaffolding process.
+The following is brief overview of the essential files and folders that are created during the scaffolding process. For more information, we encourage you to check out the dedicated [New React Application](/docs/how-to-guides/scaffolding/new-react-application#essential-files-and-folders) and [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api#essential-files-and-folders) guides.
 
-:::info
-By default, all of the files are generated in a new folder, located at `api/code/graphql/src/plugins/scaffolds/{dataModelName}`, for example `api/code/graphql/src/plugins/scaffolds/carManufacturers`.
+```bash title="New Full Stack Application Folder (Some Files Removed for Brevity)"
+├── api                                 # GraphQL API's project application folder.
+│   ├── code
+│   │   └── graphql                     # GraphQL API application code folder.
+│   │       └── src
+│   │           └── plugins
+│   │               └── scaffolds
+│   │                   └── todos       #  GraphQL API interaction example code.
+│   └── pulumi
+└── app                                 # React application's project application folder.
+    ├── code
+    │   ├── public
+    │   ├── src                         # React application code folder.
+    │   │   ├── components
+    │   │   ├── images
+    │   │   ├── plugins
+    │   │   │   └── routes
+    │   │   │       ├── graphqlApiExample       # GraphQL API interaction example code.
+    │   │   │       └── graphqlApiExample.tsx   # GraphQL API interaction example code.
+    │   │   └── styles
+    └── pulumi
+```
+
+#### GraphQL API
+
+##### [`api`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template)
+
+The project application folder that holds the newly created React application.
+
+##### [`api/code/graphql/src/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src)
+
+Contains the GraphQL API application code. This is where you'll be defining the GraphQL schema, resolver functions, business logic, authentication / authorization logic, writing tests, and potentially more.
+
+##### [`api/code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/plugins)
+
+This is where you'll be creating plugins, either manually or via other scaffolding utilities, for example via the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) scaffold.
+
+:::tip
+Do have in mind that every plugin (or a collection of plugins) you create also needs be imported and registered in the [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/index.ts#L11) entrypoint file.
 :::
 
-[`index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts)
+##### [`api/pulumi`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi)
 
-This is the entry file, which exports the [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts) plugin responsible for extending the existing GraphQL API schema, using new [type definitions](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L13) and supporting [resolvers](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L14-L25).
+This is the folder that contains all of the GraphQL API's cloud infrastructure code. In it, we have the [`dev`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folders, which represent the cloud infrastructure resources that will be deployed into development and production environments, respectively.
 
-[`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts)
+#### React Application
 
-A file that contains the schema with which we are extending our GraphQL API. This will usually be the starting point if you want to make further changes to the generated code, for example add new fields to the initial data model, add new GraphQL query or mutation operations, and more.
+#### [`app`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template)
 
-Note that in the case of the latter, you also need to define a standalone resolver function that is responsible for handling newly added query or mutation operation.
+The project application folder that holds the newly created React application.
 
-[`resolvers/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/resolvers)
+##### [`app/code/src/`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src)
 
-This folder contains the GraphQL resolver classes that support the generated [query](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) and [mutation](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsMutation.ts) GraphQL operations.
+Contains the React application code. This is where you'll be creating your application's pages, shared React components, defining routes, styles, and more.
 
-These will need to be updated as you make changes in the mentioned [`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) file. For example, if you were to introduce a new `listPopularCarManufacturers` GraphQL query, the same `listPopularCarManufacturers` method would need to be defined within the [`CarManufacturersQuery`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) class.
+##### [`app/code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins)
 
-[`entities/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/entities)
+Contains plugins, like [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins that define application routes or [`ApolloLinkPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/ApolloLinkPlugin.ts#L8) plugins that define Apollo links.
 
-Contains [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox) entities, which are used within GraphQL resolver functions. You are free to add additional entities, or modify the existing one (for example - add new entity attributes).
+##### [`app/pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/pulumi)
 
-[`__tests__/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/__tests__)
+This is the folder that contains all of the React application's cloud infrastructure code.
 
-Contains tests that ensure your application code is working as expected. As mentioned, three tests are included by default: one unit, one integration, and one end-to-end (E2E) test.
+### Deployments
 
-### First Deploy
+Once you've completed the scaffold's wizard and the files have been created, in order to actually access the GraphQL API, you need to deploy it. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them (more on this below).
 
-Once you've completed the scaffold's wizard and the files have been generated, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
+In order to fully deploy your full stack application, you need to run the following two commands:
+
+```bash title="Deploying GraphQL API"
+yarn webiny deploy {full-stack-app-path/api} --env {env}
+```
+
+```bash title="Deploying React Application"
+yarn webiny deploy {full-stack-app-path/app} --env {env}
+```
+
+Note that, for the first deploy, the order matters. Because of the fact that the React application is relying on the already deploy GraphQL API, the GraphQL API should always be deployed first.
+
+:::info
+During the scaffold's setup wizard, you will be asked if you want to immediately deploy the created GraphQL API. If you decide not to do it, you can deploy it later, as usual, with the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
+:::
 
 ### Development Using the Watch Command
 
-The most straightforward way to further develop on top of the generated code would be via the [`webiny watch`](/docs/how-to-guides/use-watch-command) command.
+The most straightforward way to continue developing on top of the created code would be via the [`webiny watch`](/docs/how-to-guides/use-watch-command) command.
 
-In order to get started, from your project root, simply run the following command:
+In order to get started, from your project root, via two separate terminal sessions, simply run the following commands:
 
+```bash title="Watching GraphQL API Code"
+yarn webiny watch {full-stack-app-path/api} --env {env}
 ```
-yarn webiny watch api/code/graphql --env {env}
+
+```bash title="Watching React Application Code"
+yarn webiny watch {full-stack-app-path/app} --env {env}
 ```
-
-With the new watch session initialized, every change you make in the code will automatically trigger a re-deploy of the code, enabling you to see the changes in the cloud almost immediately as you make them (every redeployment takes 2-4 seconds to complete).
-
-And although developers often choose this approach when developing smaller features or proof of concepts, for anything larger in scope, we recommend the new code to be tested via one or more of the mentioned types of tests.
-
-### Writing and Running Tests
-
-As mentioned in the [Features](/docs/how-to-guides/scaffolding/extend-graphql-api#features) section, by default, the scaffold includes three tests: one unit, one integration, and one end-to-end (E2E) test. When generated, all three tests should be passing once you run them, but do note that in order for the integration and end-to-end (E2E) tests to pass, you have to have your **API** project application already deployed, preferably into a development environment, for example `dev`.
 
 :::info
-To run the tests, Webiny relies on [Jest](/docs/key-topics/tools-libraries#testing), a JavaScript testing framework with a focus on simplicity.
+If you're just working on one side of your application, for example on your GraphQL API, you don't necessarily need to run both [`webiny watch`](/docs/how-to-guides/use-watch-command) commands.
 :::
 
-#### Initial Test Files
+### Extending the GraphQL API
 
-#### [`typeDefs.unit.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/typeDefs.unit.test.ts)
+The new GraphQL API can be extended in two ways. Be sure to check the [Extending GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api#extending-the-graphql-api) section in the [New GraphQL API](/docs/how-to-guides/scaffolding/new-graphql-api) scaffold's guide.
 
-A simple unit test which simply ensures that the base GraphQL type exists. Might not be a super useful example, but still, this test is here more for awareness purposes (so that developers know these can be added too).
+### Extending the React application
 
-#### [`crud.integration.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/crud.integration.test.ts)
-
-An integration test which ensures essential CRUD GraphQL query and mutation operations are working as expected. These tests are run against the application code that you have locally, but note that the code is still interacting with real cloud infrastructure resources.
-
-#### [`crud.e2e.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/crud.e2e.test.ts)
-
-An end-to-end (E2E) test which ensures essential CRUD GraphQL query and mutation operations are working as expected.
-
-Note that, although it may seem this test is testing the same functionality we've tested with the integration test, this test is run against the application code that's deployed into the actual cloud, by issuing HTTP requests to the deployed Cloudfront distribution, behind which our AWS Lambda function resides. In other words, this test makes sure not only our code is working as expected, but also that the cloud infrastructure resources are deployed and configured properly.
-
-#### Running Tests
-
-All of the test-running scripts can already be found in your root [package.json](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/dependencies.json#L68-L71) file.
-
-In order to run all tests, use the `yarn test` command. Additionally, to only run tests of a specific type, use the `yarn test:unit`, `yarn test:integration`, and `yarn test:e2e` commands.
-
-:::tip
-Jest supports the [`--watch`](https://jestjs.io/docs/cli#--watch) argument, which enables us to continuously re-run tests as we're making changes to them. You can use it with the above-shown commands.
-:::
-
-#### Creating New Tests
-
-You are free to create new tests in the similar fashion, or amend the existing one.
+On the React application side, you can start by creating new pages, in the similar fashion it's already done with the existing example pages. Be sure to check the [Creating First Pages](/docs/how-to-guides/scaffolding/new-react-application#creating-first-pages) section in the [New GraphQL API](/docs/how-to-guides/scaffolding/new-react-application) scaffold's guide.
 
 ## FAQ
 
 #### How does security (authentication and authorization) work?
 
-Please note that, by default, the authentication and authorization logic isn't included in the generated code. In other words, all of the generated GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behaviour.
+Please note that, by default, the authentication and authorization logic isn't included in the created code. In other words, all of the created GraphQL query and mutation operations can be performed by anonymous (not logged-in) users and all pages can be accessed by anybody. In most cases, this is not the desired behaviour.
 
 Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/extend-admin-area/security/introduction) to learn how to implement these on your own.
 
-#### I need more flexibility when it comes to data querying. Can I bring in a different database, for example ElasticSearch?
+#### Do I need to deploy the created GraphQL API in order develop my React application?
 
-Yes, you can. You can actually utilize the already deployed ElasticSearch cluster that's deployed with every Webiny project, by default.
-
-Until we create a dedicated tutorial on the topic, feel free to ping us via our community [Slack](https://www.webiny.com/slack).
-
-#### Can Webiny's multi-tenancy feature be utilized with this scaffold?
-
-Yes, but do note that since multi-tenancy is part of Webiny's enterprise offering, the relevant multi-tenancy code is not included in the generated application code.
-
-For more information on multi-tenancy, we recommend you check out the [Multi-Tenancy](/docs/key-topics/multi-tenancy) key topic. Also, for any implementation-related questions, feel free to contact us directly via our community [Slack](https://www.webiny.com/slack).
-
-
+Technically, no, but you probably won't get too far. In almost all cases, your React application will need to interact with an already deployed GraphQL API, in order for it to work.
